--- a/dev-css/style.css
+++ b/dev-css/style.css
@@ -4,9 +4,36 @@ p {
 
 h1 {
     font-family: fantasy;
-    font-size: 25px;
+    font-size: 75px;
+    text-align: center;
 }
 
 body {
     color: red;
+}
+
+#dog {
+    color: aqua;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+}
+
+.one {
+    color: deeppink;
+    font-size: 35px;
+    font-style: italic;
+    font-weight: 300;
+}
+
+.two {
+    color: plum;
+    font-family: cursive;
+    font: size 50px; 
+}
+
+.pic {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
 }
